show api key functionality added

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -11,6 +11,10 @@ body {
     max-width: 30rem;
 }
 
+#show-key {
+    cursor: pointer;
+}
+
 /* ===== Spinner ===== */
 #spinner {
     min-height: calc(100vh - 6rem);
